// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LabelLine rendering renders expected elements 1`] = `
<div
  className="LabelLine"
>
  <div
    className="LabelLine__label"
  >
    <Label
      htmlFor="test-id"
      text="Test"
      title="Test"
    />
  </div>
</div>
`;

exports[`LabelLine rendering renders expected elements when counter is set 1`] = `
<div
  className="LabelLine"
>
  <div
    className="LabelLine__label"
  >
    <Label
      htmlFor="test-id"
      text="Test"
      title="Test"
    />
  </div>
  <div
    className="LabelLine__counter"
  >
    test counter
  </div>
</div>
`;

exports[`LabelLine rendering renders expected elements when error is set 1`] = `
<div
  className="LabelLine"
>
  <div
    className="LabelLine__label"
  >
    <Label
      htmlFor="test-id"
      text="Test"
      title="Test"
    />
    <span
      aria-hidden={true}
      className="LabelLine__required LabelLine--error"
    >
      *
    </span>
  </div>
</div>
`;

exports[`LabelLine rendering renders expected elements when required is set 1`] = `
<div
  className="LabelLine"
>
  <div
    className="LabelLine__label"
  >
    <Label
      htmlFor="test-id"
      text="Test"
      title="Test"
    />
    <span
      aria-hidden={true}
      className="LabelLine__required"
    >
      *
    </span>
  </div>
</div>
`;
